alinmapay/openshift-KDC/alinmapay-admin-portal-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdc-admin-portal
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      dnsConfig:
        searches:
        - me.alinma.internal
      containers:
      - name: admin-portal
        image: 'registry-kdc.alinma.internal/alinmapay-v2/alinmapay-admin-portal-web:5cb912d'
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 10
        resources:
          requests:
            cpu: "300m"
            memory: "512M"
          limits:
            cpu: "512m"
            memory: "1024M"
