alinmapay/openshift-KDC/alinmapay-admin-portal-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
spec:
  selector:
    app: admin-portal
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
  type: ClusterIP
